--- a/Literature-frontend/package.json
+++ b/Literature-frontend/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "vant": "^3.0.11",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.5"
+    "vue-router": "^4.0.5",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -23,6 +24,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^6.8.0",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-vue": "^7.0.0",
