--- a/Literature-backend/requirements.txt
+++ b/Literature-backend/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.5.8
 aniso8601==9.0.1
 Babel==2.9.0
 certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
@@ -22,16 +23,20 @@ Jinja2==2.11.3
 limits==1.5.1
 Mako==1.1.4
 MarkupSafe==1.1.1
+pycparser==2.20
+pycrypto==2.6.1
+PyJWT==2.0.1
 PyMySQL==1.0.2
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2021.1
+qiniu==7.3.1
 redis==3.5.3
 redis-lock==0.2.0
 requests==2.25.1
 six==1.15.0
 speaklater==1.3
-SQLAlchemy==1.4.3
+SQLAlchemy==1.4.5
 urllib3==1.26.4
 Werkzeug==1.0.1
 WTForms==2.3.3
