--- a/Literature-admin/package.json
+++ b/Literature-admin/package.json
@@ -13,7 +13,8 @@
     "element-plus": "^1.0.2-beta.36",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-along": "^1.2.13"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
