--- a/Literature-admin/package.json
+++ b/Literature-admin/package.json
@@ -14,7 +14,8 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
-    "vuex-along": "^1.2.13"
+    "vuex-along": "^1.2.13",
+    "wangeditor": "^4.6.14"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
