--- a/Literature-frontend/package.json
+++ b/Literature-frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vant": "^3.0.11",
