--- a/Literature-frontend/package.json
+++ b/Literature-frontend/package.json
@@ -8,13 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vant": "^3.0.11",
+    "vant": "^3.0.13",
     "vue": "^3.0.0",
     "vue-router": "^4.0.5",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-along": "^1.2.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
